<resources>
    <string name="app_name">AboutMe</string>
    <string name="contacts">Contacts</string>
    <string name="email_proton5000_gmail_com">email: proton5000@gmail.com</string>
    <string name="phone_380663945359">phone: +380663945359</string>
    <string name="education">Education</string>
    <string name="work_experience">Work experience</string>
    <string name="skills">Skills</string>
    <string name="national_metallurgical_academy_of_ukraine">✓\tNational Metallurgical Academy of Ukraine;</string>
    <string name="faculty_of_computer_systems_power_industry_and_automation">Faculty of Computer Systems, Power Industry and Automation</string>
    <string name="earned_a_bachelor_of_computer_systems_industry_and_automation_degree_in_2006">▪ Earned a Bachelor of Computer Systems, Industry and Automation degree in 2006;</string>
    <string name="earned_a_specialist_of_computer_systems_industry_and_automation_degree_in_2007">▪\tEarned a Specialist of Computer Systems, Industry and Automation degree in 2007.</string>
    <string name="_18_04_2016_present_full_stack_developer_at_internet_marketing_company_euta_capital">✓\t18.04.2016 – present - full-stack developer at Internet Marketing Company EUTA Capital.</string>
    <string name="backend_java_se_8_maven_spring_boot_hibernate_social_network_libraries_such_as_facebook_foursquare">BackEnd: Java SE 8, Maven, Spring Boot, Hibernate, social network libraries such as Facebook, Foursquare;</string>
    <string name="integration_chat_server_openfire_on_amazon_ec2_ubuntu_server_16_04_mysql_5_7_apache_2_4_conversejs_3_0_2_xmpp_web_client">Integration: Chat server Openfire on Amazon EC2 Ubuntu server 16.04 + MySQL 5.7 + Apache 2.4 + ConverseJS 3.0.2 XMPP web client;</string>
    <string name="frontend_html_scss_angularjs_js_social_network_sdk_such_as_facebook_google">FrontEnd: html, scss, AngularJS, JS, social network SDK such as Facebook, Google+.</string>
    <string name="_12_04_2009_present_telecommunications_engineer_at_llc_antron">✓ 12.04.2009 – present - telecommunications engineer at LLC ANTRON.</string>
    <string name="responsibilities_installation_configuration_and_linking_of_ctc_centralized_traffic_control_system_of_ukraine_railway_state_administration_of_railway_transport_of_ukraine_synchronization_of_the_server_group_for_the_automation_and_management_of_railway_transport_preparation_of_workstation_controllers">Responsibilities: installation, configuration and linking of CTC (centralized traffic control system) of Ukraine Railway (State Administration of Railway Transport of Ukraine); synchronization of the server group for the automation and management of railway transport, preparation of workstation controllers.</string>
    <string name="_20_07_2008_09_01_2009_administrator_of_operational_user_support_helpdesk_at_company_homecredit_bank">✓ 20.07.2008 — 09.01.2009 - administrator of operational user support (helpdesk) at Company “Homecredit Bank”.</string>
    <string name="the_reduction_of_the_department_necessitated_my_retrenchment">The reduction of the department necessitated my retrenchment;</string>
    <string name="_03_05_2007_15_07_2008_computer_networks_engineer_at_jsc_dnepropetrovsk_paint_factory">✓ 03.05.2007 — 15.07.2008 - Computer networks engineer at JSC “Dnepropetrovsk paint factory”.</string>
    <string name="winding_up_of_an_enterprise_necessitated_my_retrenchment">Winding up of an enterprise necessitated my retrenchment.</string>
    <string name="spring_hibernate_freemarker_logback_log4j_junit_testng_jdbc">✓\tSpring, Hibernate, Freemarker, Logback, log4j, JUnit, TestNG, JDBC;</string>
    <string name="html5_javascript_css3_jquery_angularjs_nodejs_bootstrap">✓\tHTML5, JavaScript, CSS3, JQuery, AngularJS, Nodejs, Bootstrap.</string>
    <string name="git_svn_maven_apache_tomcat_nginx_postgresql_mysql">✓\tGit, SVN, Maven, Apache Tomcat, Nginx, PostgreSQL, MySQL;</string>
    <string name="systems_administration_win_xp_7_8_8_1_10_linux_deb_rpm">✓\tSystems Administration: Win (xp / 7 / 8 / 8.1 / 10) | Linux (deb / rpm)</string>
    <string name="network_services_dns_dhcp_nat_iptables_fw_ppp_samba_web_server">✓\tNetwork Services: DNS, DHCP, NAT, IPTABLES (FW), PPP, SAMBA, WEB server</string>
    <string name="education_and_training">Education and Training</string>
    <string name="_18_02_2015_18_05_2015_it_training_in_dnipropetrovsk_skillsup_in_java_core">✓\t18.02.2015 – 18.05.2015 IT Training in Dnipropetrovsk “SkillsUp” in Java Core</string>
    <string name="_02_09_2014_02_11_2014_it_school_levelup_in_basics_of_programming">✓\t02.09.2014 – 02.11.2014 IT School “LevelUP” in Basics of programming</string>
    <string name="_10_11_2014_10_11_2015_it_school_levelup_in_java_programming">✓\t10.11.2014 – 10.11.2015 IT School “LevelUP” in Java programming</string>
    <string name="html5_css3_javascript_jquery_angularjs_bootstrap_mysql_online_courses_https_www_codecademy_com_http_www_magisters_org">✓\tHTML5, CSS3, JavaScript, JQuery, AngularJS, Bootstrap, MySQL – online Courses https://www.codecademy.com/, http://www.magisters.org/</string>
    <string name="my_github">My GitHub</string>
    <string name="https_github_com_proton5000_icq_console_icq">https://github.com/proton5000/icq - console icq</string>
    <string name="https_github_com_proton5000_zoo_simple_zoo_database_spring_mvc_app">https://github.com/proton5000/zoo - simple zoo database (Spring MVC app)</string>
    <string name="languages">Languages</string>
    <string name="ukrainian_native">✓\tUkrainian – native;</string>
    <string name="russian_fluent">✓\tRussian – fluent;</string>
    <string name="english_reading_of_documentation_simple_conversation">✓\tEnglish – reading of documentation, simple conversation.</string>
    <string name="ertificates">Сertificates</string>
    <string name="personal_data">Personal data</string>
    <string name="sociable_decent_considerate_teachable_purposeful_sociable_good_teamwork_skills">Sociable, decent, considerate, teachable, purposeful, sociable, good teamwork skills.</string>
    <string name="java_7_8_se">✓\tJava 7/8 SE;</string>
    <string name="os">OS</string>
</resources>
