<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context="proton.aboutme.MainActivity">

    <ImageView
        android:id="@+id/myPhoto"
        android:layout_width="wrap_content"
        android:layout_height="128dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="8dp"
        app:srcCompat="@drawable/myphoto" />

    <TextView
        android:id="@+id/contacts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/myPhoto"
        android:gravity="center"
        android:layout_marginBottom="8dp"
        android:text="@string/contacts"
        android:textColor="#000"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/contacts"
        android:gravity="left"
        android:text="@string/phone_380663945359"
        android:textColor="#000"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/phone"
        android:gravity="left"
        android:text="@string/email_proton5000_gmail_com"
        android:textColor="#000"
        android:layout_marginBottom="8dp"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btnEducation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:onClick="openParts"
        android:text="@string/education"
        android:layout_below="@+id/email"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/btnWorkExperience"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/work_experience"
        android:onClick="openParts"
        android:layout_below="@+id/btnEducation"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/btnSkills"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="openParts"
        android:gravity="center"
        android:text="@string/skills"
        android:layout_below="@+id/btnWorkExperience"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
